--- a/spring-jenkins-pipeline/src/main/resources/application.properties
+++ b/spring-jenkins-pipeline/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.data.mongodb.database=Jenkins-Pipeline
 # spring.data.mongodb.password=
 
 spring.data.mongodb.repositories.enabled=true
+
+server.port=8081
